# ml-ollama

./: README.md  ml-ollama-langchain.ipynb  ml-ollama.ipynb  pyproject.toml  requirements.txt
container/: ollama_container.sh
ollama-webui/: ollama_webui.sh
ollama_remote/: ollama.service  ollama_remote.sh
